# psql-next

./: .dockerignore  .env.example  .gitignore  BRANCH_STRATEGY_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_ARCHITECTURE_REVIEW.md  Cargo-newrelic.toml  Cargo.simple.toml  Cargo.toml  DEVELOPERS.md  DOCUMENTATION.md  Dockerfile  Dockerfile-newrelic  Dockerfile.simple  Dockerfile.working  GRANULAR_CODE_REVIEW.md  HYBRID_STRATEGY_PLAN.md  LICENSE  Makefile  NEWRELIC_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README-OTEL.md  README.md  SECURITY.md  check-all-postgres-events.sh  check-nr-errors.sh  comprehensive-changes-analysis.md  comprehensive-improvements-summary.md  config-docker.toml  config-local.toml  config-newrelic.toml  config-otlp.toml  config.example.toml  critical-fixes-summary.md  docker-compose-newrelic.yml  docker-compose.psql-newrelic.yml  docker-compose.yml  enhanced-deployment-patterns.md  enhanced-metric-mapping.md  (+27 more)
backup-20250710-191846/: ARCHITECTURE.md  E2E_TESTING_COMPLETE.md  FEATURES.md  builder-config-corrected.yaml  builder-config-official.yaml  builder-config-v2.yaml  builder-config.yaml
backup-configs-20250710-191958/: collector-simple-alternate.yaml
backup-deployments-20250710-192545/: docker-compose.test.yml  docker-compose.yaml  values-dev.yaml  values-fixed.yaml  values.yaml
backup-docker-cleanup-20250710-192624/: docker-compose-ha.yaml  docker-compose-production.yaml  docker-compose.production-secure.yml  docker-compose.production.yml
backup-docs-20250710-192155/: README-NEW-RELIC-ONLY.md
config/: collector-newrelic.yaml
configs/: README.md  collector-config-env.toml  collector-config.toml  collector-hybrid.toml  collector-nri.toml  collector-otlp.toml  newrelic-infra.yml  nri-config.yml  nri-postgresql-config.yml  otel-collector-config-eu.yaml  otel-collector-config-us.yaml  otel-collector-config.yaml  otel-config.toml
crates/core/: Cargo.toml
crates/core/src/: collector.rs  error.rs  lib.rs  metrics.rs  types.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: lib.rs
crates/nri-adapter/: Cargo.toml
crates/nri-adapter/src/: lib.rs
crates/otel-adapter/: Cargo.toml
crates/otel-adapter/src/: lib.rs
crates/query-engine/: Cargo.toml
crates/query-engine/src/: engine.rs  lib.rs  queries.rs  safe_queries.rs  utils.rs
database-intelligence-monorepo/: .gitignore  CLAUDE.md  ENTERPRISE-STATUS.md  HEALTH_CHECK_POLICY.md  IMPLEMENTATION_STATUS.md  Makefile  README.md
database-intelligence-mvp/: .env.backup  .env.backup.20250628_120220  .env.example  .gitignore  ACTUAL_PROJECT_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  CODEBASE_INTEGRATION_ANALYSIS.md  COMPREHENSIVE_ARCHITECTURE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION.md  CONSOLIDATED_DOCUMENTATION.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_VERIFICATION.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  E2E_CONSOLIDATION_SUMMARY.md  E2E_TESTS_DOCUMENTATION.md  E2E_TESTS_QUICK_REFERENCE.md  E2E_TEST_VERIFICATION_REPORT.md  E2E_VERIFICATION_REPORT.md  ENV_SETUP_SUMMARY.md  EVOLUTION.md  EXPERIMENTAL-FEATURES.md  FIXES_APPLIED.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION_COMPLETENESS_ANALYSIS.md  KNOWN_ISSUES.md  LIMITATIONS.md  (+59 more)
database-intelligence-mysql/: .env.example  .env.master  .gitignore  CLAUDE.md  Dockerfile.loadgen  E2E_VALIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  STATUS.md  STREAMLINE_SUMMARY.md  TROUBLESHOOTING.md  WAIT_MONITORING_QUICKREF.md  docker-compose-ha.yml  docker-compose.enhanced.yml  docker-compose.yml  start.sh  test-commands.sh  test-data-generator.sql
database-intelligence-restructured/: .env copy  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  COMPLETE_REFACTORING_VERIFICATION.md  CONFIG_CONSOLIDATION.md  CONSOLIDATED_DOCUMENTATION.md  CONSOLIDATION_SUMMARY.md  CRITICAL_CLEANUP_TASKS.md  E2E-TEST-SUMMARY.md  E2E_TEST_RESULTS.md  END_TO_END_ANALYSIS_REPORT.md  FINAL-COMPARISON-ANALYSIS.md  FINAL-E2E-SUMMARY.md  FINAL-E2E-VALIDATION.md  FUNCTIONALITY_INTEGRATION_PLAN.md  IMMEDIATE_INTEGRATION_STEPS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ACHIEVEMENTS.md  INTEGRATION_STRATEGY_SUMMARY.md  MIGRATION.md  Makefile  Makefile.unified  NEXT_STEPS.md  NEXT_STEPS_YAML_REVIEW.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  USER_SESSION_DASHBOARD_SUMMARY.md  YAML_CONSOLIDATION.md  align-all-versions.sh  analyze-versions.sh  apply-version-fixes.sh  build-and-test.sh  build-basic-collector.sh  build-minimal-collector.sh  build.sh  check-scraper-versions.sh  (+42 more)
demo/: README.md  collector.py  docker-compose-newrelic.yml  docker-compose.yml  init.sql  otel-collector-config.yaml  prometheus.yml
docs/: 01-architecture-overview.md  02-implementation-guide.md  03-deployment-operations.md  04-metrics-reference.md  05-migration-guide.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION.md  NEWRELIC_ARCHITECTURE.md  README.md  TESTING.md  nrdb-otel-metrics-mapping.md
examples/: docker-config.toml  dual-mode-config.toml  helm-test-values.yaml  high-security.toml  live-config.toml  multi-instance.toml  nri-config.toml  pgbouncer.toml  simple-config.toml  test-config.toml  test-values-local.yaml  test-values.yaml  working-config.toml
integrations.d/: postgresql-config.yml
scripts/: analyze-nrdb-otel-mapping.py  check-newrelic-data.sh  compare-metrics.py  deploy-dual-collectors.sh  deploy-k8s.sh  generate-load.sql  helm-deploy.sh  init-db.sql  init-postgres.sql  nri-forwarder.sh  query-dual-mode-metrics.sh  query-nrdb.sh  requirements.txt  run-dual-collectors.sh  run-e2e.sh  run-load-test.sh  run-unified-collector.sh  run.sh  send-nri-metrics.sh  send-to-newrelic.sh  set-newrelic-endpoint.sh  test-kustomize.sh  test-load.sh  verify-metrics.sh
(+2100 files in other folders)
