[package]
name = "postgres-collector-core"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["sync", "time"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.12"