[package]
name = "postgres-extensions"
version = "1.0.0"
edition = "2021"

[dependencies]
postgres-collector-core = { path = "../core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }