[package]
name = "postgres-nri-adapter"
version = "1.0.0"
edition = "2021"

[dependencies]
postgres-collector-core = { path = "../core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }