[package]
name = "postgres-query-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
postgres-collector-core = { path = "../core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }